@@ -9,7 +9,7 @@
             <settings.video>
                 <TCEforms>
                     <exclude>1</exclude>
-                    <label>Video auswählen</label>
+                    <label>LLL:EXT:jhe_vimeo/Resources/Private/Language/locallang_csh_tx_jhevimeo_domain_model_video.xml:tx_jhevimeo_domain_model_video.selectVideoLabel</label>
                     <config>
                         <type>group</type>
                         <internal_type>db</internal_type>
@@ -24,26 +24,15 @@
                 <TCEforms>
                     <exclude>1</exclude>
                     <label>Breite des Videos</label>
+                    <label>LLL:EXT:jhe_vimeo/Resources/Private/Language/locallang_csh_tx_jhevimeo_domain_model_video.xml:tx_jhevimeo_domain_model_video.videoWidthLabel</label>
                     <config>
                         <type>input</type>
                         <size>20</size>
                         <max>30</max>
-                        <eval>trim</eval>
+                        <eval>int</eval>
                     </config>
                 </TCEforms>
             </settings.width>
-            <settings.height>
-                <TCEforms>
-                    <exclude>1</exclude>
-                    <label>Höhe des Videos</label>
-                    <config>
-                        <type>input</type>
-                        <size>20</size>
-                        <max>30</max>
-                        <eval>trim</eval>
-                    </config>
-                </TCEforms>
-            </settings.height>
         </el>
     </ROOT>
 </T3DataStructure>
