@@ -10,11 +10,15 @@
 			<label index="title.description">title</label>
 			<label index="description.description">description</label>
 			<label index="videos.description">videos</label>
+			<label index="tx_jhevimeo_domain_model_videolist.selectVideoListLabel">Select video list</label>
+			<label index="tx_jhevimeo_domain_model_videolist.videosWidthLabel">Width of the videos</label>
 		</languageKey>
 		<languageKey index="de" type="array">
 			<label index="title.description">Titel</label>
 			<label index="description.description">Beschreibung</label>
 			<label index="videos.description">Videos</label>
+			<label index="tx_jhevimeo_domain_model_videolist.selectVideoListLabel">Videoliste auswählen</label>
+			<label index="tx_jhevimeo_domain_model_videolist.videosWidthLabel">Breite der Videos</label>
 		</languageKey>
 	</data>
 </T3locallang>
